# BHive

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  BHiveSnippets.snippet  CMakeLists.txt  CMakePresets.json  README.md  Settings.projlncher  vcpkg.json
BHive-Editor/: CMakeLists.txt
BHive-Editor/src/: ContentBrowser.cpp  ContentBrowser.h  Editor.cpp  EditorContentBrowser.h  EditorContentBrowser.inl  EditorLayer.cpp  EditorLayer.h  LogPanel.cpp  ProjectLauncherLayer.cpp  ProjectLauncherLayer.h  PropertiesPanel.cpp  PropertiesPanel.h  SceneHeirarchyPanel.cpp  SceneHeirarchyPanel.h  ThumbnailCache.cpp  ThumbnailCache.h  WindowBase.cpp
BHive-Editor/src/contextmenus/: ContextMenus.cpp  ContextMenus.h
BHive-Editor/src/editorwindows/: AnimationEditor.cpp  AssetEditor.h  FlipBookEditor.cpp  MaterialEditor.cpp  MaterialEditor.h  MeshEditor.cpp  MeshEditor.h  SpriteEditor.cpp  SpriteSheetEditor.cpp  TAssetEditor.h  TextureEditor.cpp
BHive-Editor/src/factories/: AnimGraphFactory.cpp  MaterialFactory.cpp  MeshFactory.cpp  MeshFactory.h  PhysicsMaterialFactory.h  TextureFactory.cpp  TextureFactory.h  WorldFactory.cpp
BHive-Editor/src/inspectors/: InspectorAsset.cpp  InspectorAsset.h  InspectorDelegate.cpp  InspectorDelegate.h
BHive-Editor/src/subsystems/: EditorSubSystem.cpp  EditorSubSystem.h  SelectionSubSystem.h  WindowSubSystem.cpp  WindowSubSystem.h
BHive-Editor/src/windows/: MeshOptionsWindow.cpp  MeshOptionsWindow.h
Editor/: CMakeLists.txt
Editor/src/: ContentBrowser.cpp  ContentBrowser.h  DetailsPanel.cpp  DetailsPanel.h  EditorApplication.cpp  EditorContentBrowser.cpp  EditorContentBrowser.h  EditorLayer.cpp  EditorLayer.h  PropertiesPanel.cpp  PropertiesPanel.h  SceneHeirarchyPanel.cpp  SceneHeirarchyPanel.h
Editor/src/assetmenus/: SpriteAssetContextMenu.cpp  SpriteAssetContextMenu.h
Editor/src/factories/: AnimGraphFactory.cpp  AnimGraphFactory.h  AssetFactory.cpp  AssetFactory.h  AudioFactory.cpp  AudioFactory.h  FlipBookFactory.cpp  FlipBookFactory.h  InputContextFactory.cpp  InputContextFactory.h  MaterialFactory.cpp  MaterialFactory.h  MeshFactory.cpp  MeshFactory.h  PhysicsMaterialFactory.cpp  PhysicsMaterialFactory.h  PrefabFactory.cpp  SpriteFactory.cpp  SpriteFactory.h  SpriteSheetFactory.cpp  SpriteSheetFactory.h  TextureFactory.cpp  TextureFactory.h
Editor/src/graph/: Graph.cpp  Graph.h  GraphContext.cpp  GraphContext.h  GraphEventHandler.h
Editor/src/inspector/: Inspector.cpp  Inspector.h  InspectorAsset.cpp  InspectorAsset.h  InspectorBaseTypes.cpp  InspectorBaseTypes.h  InspectorBlackBoard.cpp  InspectorCoreTypes.cpp  InspectorCoreTypes.h  InspectorEnum.cpp  InspectorEnum.h  InspectorType.cpp  Inspectors.cpp  Inspectors.h  PropertyLayout.cpp  PropertyLayout.h
Editor/src/selection/: Selection.cpp  Selection.h  SelectionEvents.h
Editor/src/subsystems/: EditSubSystem.cpp  EditSubSystem.h  IWindow.h  WindowSubSystem.cpp  WindowSubSystem.h
Editor/src/windows/: AnimationEditor.h  AssetEditor.cpp  AssetEditor.h  AudioEditor.cpp  AudioEditor.h  FlipBookEditor.h  InputContextEditor.h  LogPanel.h  MaterialEditor.cpp  MaterialEditor.h  MeshEditor.h  MeshOptionsWindow.cpp  MeshOptionsWindow.h  PhysicsMaterialEditor.h  SkeletonEditor.h  SpriteEditor.cpp  SpriteEditor.h  TAssetEditor.h  WindowBase.cpp  WindowBase.h
Engine/: CMakeLists.txt
Engine/data/meshes/: Sphere.glb
Engine/data/shaders/: BDRFFunctions.glsl  BDRFMaterial.glsl  BRDFLUT.glsl  Billboard.glsl  Core.glsl  DownSample.glsl  Equirectangular.glsl  Instanced.vert  Irradiance.glsl  Lighting.glsl  Line.glsl  Picking.glsl  PreFilter.glsl  PreFilterEnironmentShader.glsl  Quad.glsl  ScreenQuad.glsl  ShadowPass.glsl  ShadowPointPass.glsl  Skinning.glsl  SkyBox.glsl  SpotShadowPass.glsl  UpSample.glsl
Engine/src/: BHive.h  BHivePCH.cpp  BHivePCH.h
Engine/src/Platform/: VulkanAPI.cpp  VulkanAPI.h  VulkanContext.cpp  VulkanContext.h  VulkanCore.h  VulkanDevice.cpp  VulkanDevice.h  VulkanInstance.cpp  VulkanInstance.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanShader.cpp  VulkanShader.h  VulkanSurface.cpp  VulkanSurface.h  VulkanSwapChain.cpp  VulkanSwapChain.h
Inspectors/: CMakeLists.txt
Inspectors/include/: Inspector.h  InspectorEnum.h  InspectorPath.h  InspectorSubClassOf.h  InspectorType.h  Inspectors.h  PropertyLayout.h
Inspectors/include/containers/: AssociativeContainer.h  SequentialContainer.h
Inspectors/include/core/: InspectorCore.h
Inspectors/src/: InspectorBaseTypes.cpp  InspectorCoreTypes.cpp  InspectorEnum.cpp  InspectorPath.cpp  InspectorSubClassOf.cpp  Inspectors.cpp  PropertyLayout.cpp
Inspectors/src/containers/: AssociativeConatiner.cpp  SequentialContainer.cpp
Project/: CMakeLists.txt  Project.proj
Project/resources/: asset_registry.registry
Project/resources/Input/: PlayerInput.input
Project/resources/Materials/: Material.001.material  RedMaterial.material  plane0.material
Project/resources/Sprites/: PlayerFB.flipbook  PlayerSS.spritesheet
Project/resources/TestImport/: NewFlipBook.flipbook.asset  NewInputContext.asset  NewMaterial.asset  NewPhysicsMaterial.asset  NewSprite.asset  NewSpriteSheet.asset  PM_Ball.asset
Project/resources/meshes/: CubeSpheres.glb  CubeSpheres.skeleton  (+7 more)
Project/src/: MoveComponent.cpp  MoveComponent.h  Player.cpp  Player.h  RotateComponent.cpp  RotateComponent.h
ProjectLauncher/: CMakeLists.txt
ProjectLauncher/src/: ProjectLauncher.cpp  ProjectLauncherLayer.cpp  ProjectLauncherLayer.h
ReflectionBuilder/: CMakeLists.txt
ReflectionBuilder/src/: CPPParser.cs  Program.cs
SolarSystem/: CMakeLists.txt
SolarSystem/Resources/: PlanetData.json  Registry.registry
SolarSystem/src/: CelestrialBody.cpp  CelestrialBody.h  Component.cpp  Component.h  Planet.cpp  Planet.h  PlanetData.h  ResourceManager.cpp  ResourceManager.h  SolarSystemApp.cpp  SolarSystemLayer.cpp  SolarSystemLayer.h  Universe.cpp  Universe.h  shader.embedded
projects/Mario/: CMakeLists.txt  Mario.proj  TestPhysics.asset
projects/Shadows/: CMakeLists.txt
window_test/: CMakeLists.txt  future_test.cpp  future_test.h  main.cpp  shader.embedded
(+1115 files in other folders)
