cmake_minimum_required(VERSION 3.8)


include(FETCHCONTENT)

project(BHive VERSION 1.0 LANGUAGES CXX C)
set(Vulkan_SDK_PATH "C:/VulkanSDK/1.4.309.0")
set(ENV{VULKAN_SDK} ${Vulkan_SDK_PATH})

foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
    string( TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG )
    set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_SOURCE_DIR}/bin/lib/${CMAKE_SYSTEM_NAME}/${CMAKE_BUILD_TYPE} )
    set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_SOURCE_DIR}/bin/${CMAKE_SYSTEM_NAME}/${CMAKE_BUILD_TYPE} )
    set( CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_SOURCE_DIR}/bin/${CMAKE_SYSTEM_NAME}/${CMAKE_BUILD_TYPE} )
endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES )

set_property(GLOBAL PROPERTY USE_FOLDERS ON)


add_subdirectory(Engine)
add_subdirectory(Inspectors)
add_subdirectory(projects)
add_subdirectory(BHive-Editor)
#add_subdirectory(ReflectionBuilder)



