cmake_minimum_required(VERSION 3.8)

include(CSharpUtilities)
file(GLOB_RECURSE SRC CMAKE_CONFIGURE_DEPENDS src/**)

project(REFLECTION_GENERATOR VERSION 0.0.1 LANGUAGES CSharp)
add_executable(REFLECTION ${SRC})
set_property(TARGET REFLECTION PROPERTY VS_DOTNET_TARGET_FRAMEWORK_VERSION "v4.6.1")
set_property(TARGET REFLECTION PROPERTY WIN32_EXECUTABLE TRUE)